--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -53,7 +53,7 @@
         }
 
         // Load shooter image
-        fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/caveman background.jpeg', function(img) {
+        fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/caveman.jpeg', function(img) {
             shooter = img.set({
                 left: 50,
                 top: canvas.height / 2 - 25,
