--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -97,7 +97,7 @@ function moveShooter(direction) {
 
         // Load enemy image and create an enemy
         function createEnemy() {
-            fabric.Image.fromURL('enemy.png', function(img) {
+            fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/pig.png?raw=true', function(img) {
                 const enemy = img.set({
                     left: canvas.width,
                     top: Math.random() * (canvas.height - 50),
