--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -35,7 +35,7 @@
         const canvas = new fabric.Canvas('gameCanvas');
 
         // Set up a background image
-        fabric.Image.fromURL('https://example.com/background.png', function(img) {
+        fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/caveman%20background.jpeg?raw=true', function(img) {
             img.scaleToWidth(canvas.width); // Scale the background to fit the canvas width
             img.scaleToHeight(canvas.height); // Scale the background to fit the canvas height
             canvas.setBackgroundImage(img, canvas.renderAll.bind(canvas)); // Set as background
