--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -153,7 +153,7 @@
             const shooterHeight = shooter.height * shooter.scaleY;
 
             // Load bullet image
-            fabric.Image.fromURL('https://path/to/your/bullet-image.png', function(img) {
+            fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/arrow-removebg-preview.png?raw=true', function(img) {
                 img.set({
                     left: shooter.left + shooterWidth / 2 - img.width / 2,
                     top: shooter.top + shooterHeight / 2 - img.height / 2,
