--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -152,8 +152,12 @@
             const shooterWidth = shooter.width * shooter.scaleX;
             const shooterHeight = shooter.height * shooter.scaleY;
 
-            // Load bullet image
+            // Load bullet image and set its size
             fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/arrow-removebg-preview.png?raw=true', function(img) {
+                // Resize the bullet image to be smaller
+                img.scaleToWidth(20); // Set width to 20 pixels
+                img.scaleToHeight(5); // Set height to 5 pixels
+
                 img.set({
                     left: shooter.left + shooterWidth / 2 - img.width / 2,
                     top: shooter.top + shooterHeight / 2 - img.height / 2,
