--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -109,38 +109,47 @@
             if (!gameRunning) return;
 
             if (event.key === 'ArrowUp') {
+                console.log('ArrowUp pressed');
                 if (!isMovingUp) {
                     isMovingUp = true;
                     requestAnimationFrame(moveShooter);
                 }
             } else if (event.key === 'ArrowDown') {
+                console.log('ArrowDown pressed');
                 if (!isMovingDown) {
                     isMovingDown = true;
                     requestAnimationFrame(moveShooter);
                 }
             } else if (event.key === 'ArrowLeft') {
+                console.log('ArrowLeft pressed');
                 if (!isMovingLeft) {
                     isMovingLeft = true;
                     requestAnimationFrame(moveShooter);
                 }
             } else if (event.key === 'ArrowRight') {
+                console.log('ArrowRight pressed');
                 if (!isMovingRight) {
                     isMovingRight = true;
                     requestAnimationFrame(moveShooter);
                 }
             } else if (event.key === ' ') {
+                console.log('Spacebar pressed');
                 shoot();
             }
         });
 
         document.addEventListener('keyup', (event) => {
             if (event.key === 'ArrowUp') {
+                console.log('ArrowUp released');
                 isMovingUp = false;
             } else if (event.key === 'ArrowDown') {
+                console.log('ArrowDown released');
                 isMovingDown = false;
             } else if (event.key === 'ArrowLeft') {
+                console.log('ArrowLeft released');
                 isMovingLeft = false;
             } else if (event.key === 'ArrowRight') {
+                console.log('ArrowRight released');
                 isMovingRight = false;
             }
         });
@@ -152,12 +161,10 @@
             const shooterWidth = shooter.width * shooter.scaleX;
             const shooterHeight = shooter.height * shooter.scaleY;
 
-            // Log to check if the shoot function is called
-            console.log('Shooting arrow');
+            console.log('Shooting arrow'); // Debugging line
 
             // Load bullet image and set its size
             fabric.Image.fromURL('https://github.com/ntriolo/ntriolo.github.io/blob/main/fabricjs2Dshooter/arrow-removebg-preview.png?raw=true', function(img) {
-                // Temporarily remove scaling to debug visibility
                 img.scaleToWidth(20); // Set width to 20 pixels
                 img.scaleToHeight(5); // Set height to 5 pixels
 
