--- a/fabricjs2Dshooter/practice.html
+++ b/fabricjs2Dshooter/practice.html
@@ -42,8 +42,8 @@
         });
 
         // Sound effects
-        const shootSound = new Audio('https://example.com/shoot-sound.mp3'); // Replace with your sound file URL
-        const hitSound = new Audio('https://example.com/hit-sound.mp3'); // Replace with your sound file URL
+        const shootSound = new Audio('bow-release-bow-and-arrow-4-101936.mp3'); // Replace with your sound file URL
+        const hitSound = new Audio('arrow-impact-87260.mp3'); // Replace with your sound file URL
         const backgroundMusic = new Audio('https://example.com/background-music.mp3'); // Replace with your sound file URL
 
         // Play background music (looping)
